more work on home page

--- a/src/app/econ/econpillars/econpillars.component.html
+++ b/src/app/econ/econpillars/econpillars.component.html
@@ -5,15 +5,15 @@
     </p>
     <div id=flexContainer class=flex-justify-center>
         <div id=sectorCard>
-            <img src="../../assets/img/economy/highTechBg.png">
+            <img src="../../assets/img/economy/highTechBg.png" draggable="false">
             <span>High Tech Electronics</span> 
         </div>
         <div id=sectorCard>
-            <img src="../../assets/img/economy/defenseBg.png">
+            <img src="../../assets/img/economy/defenseBg.png" draggable="false">
             <span>Defence</span> 
         </div>
         <div id=sectorCard>
-            <img src="../../assets/img/economy/telecomBg.png">
+            <img src="../../assets/img/economy/telecomBg.png" draggable="false">
             <span>Telecommuncation Services</span> 
         </div>
     </div>
