--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,6 +10,7 @@
             <li><a routerLink="/help">Help</a></li>
             <li><a routerLink="/privacy">Privacy</a></li>
             <li><a routerLink="/cookies">Cookies</a></li>
+            <li><a routerLink="/disclaimer">Disclaimer</a></li>
             <li><a routerLink="/contact">Contact Us</a></li>
         </ul>
     </div>
