--- a/src/app/home/home-core/home-core.component.html
+++ b/src/app/home/home-core/home-core.component.html
@@ -1,1 +1,6 @@
-<p>home-core works!</p>
+<div id=parallax>
+    <app-welcome></app-welcome>
+    <app-things-to-do></app-things-to-do>
+</div>
+
+<img src="../../../assets/img/home/welcomeSplash.jpg" draggable="false">
