--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,11 +5,11 @@
         </a>
     </div>
     <ul>
-        <li routerLinkActive=active><a routerLink="/overview">Overview</a></li>
         <li routerLinkActive=active><a routerLink="/history">History</a></li>
         <li routerLinkActive=active><a routerLink="/government">Government</a></li>
         <li routerLinkActive=active><a routerLink="/economy">Economy</a></li>
         <li routerLinkActive=active><a routerLink="/defence">Defence</a></li>
         <li routerLinkActive=active><a routerLink="/culture">Culture</a></li>
+        <li routerLinkActive=active><a routerLink="/facts">Facts</a></li>
     </ul>
 </nav>
