things you can do-prototyped

--- a/src/app/home/home-core/home-core.component.html
+++ b/src/app/home/home-core/home-core.component.html
@@ -1,6 +1,9 @@
-<div id=parallax>
-    <app-welcome></app-welcome>
-    <app-things-to-do></app-things-to-do>
+<div id=core>
+    <div id=parallax>
+        <app-welcome></app-welcome>
+        <app-quick-links></app-quick-links>
+        <app-things-to-do></app-things-to-do>
+    </div>
+    
+    <img src="../../../assets/img/home/welcomeSplash.jpg" draggable="false">
 </div>
-
-<img src="../../../assets/img/home/welcomeSplash.jpg" draggable="false">
