--- a/src/app/home/things-to-do/things-to-do.component.html
+++ b/src/app/home/things-to-do/things-to-do.component.html
@@ -1,3 +1,21 @@
 <div id=container>
-    <h1 class=no-margin>Things You Can Do</h1>
+    <h3 class=no-margin>Things You Can Do</h3>
+    <div id=carousel>
+        <div id=card>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+        </div>
+        <div id=card>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+        </div>
+        <div id=card>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+        </div>
+        <div id=card>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+        </div>
+    </div>
 </div>
