--- a/src/app/home/quick-links/quick-links.component.html
+++ b/src/app/home/quick-links/quick-links.component.html
@@ -1,18 +1,35 @@
 <div id=gridContainer>
-    <div id=gridColumn>
-        <div id=columnItem>
-            <h2>Coronavirus</h2>
-        </div>
-    </div> 
-    <div id=gridColumn>
-        <div id=columnItem>
-            <h2>Tax</h2>
-        </div>
-
-    </div> 
-    <div id=gridColumn>
-        <div id=columnItem>
-            <h2>Conscription</h2>
-        </div>
-    </div> 
+    <div id=gridItem>
+        <a routerLink="">Coronavirus (COVID-19)</a>
+        <p>Regulations, guidelines, statistics, government aid.</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Employment</a>
+        <p>Opportunities, wages, leaves, re-skilling or re-training</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Emmigration</a>
+        <p>Passport renewal, travel advice, working overseas</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Transport</a>
+        <p>Licenses, fines, tickets, registrations</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Immigration</a>
+        <p>Visa, refugees, customs, border security, citizenship</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Conscription</a>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Education</a>
+        <p>Admissions, apprenticeships, scholarships, school holidays</p>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Money and Tax</a>
+    </div>
+    <div id=gridItem>
+        <a routerLink="">Environment</a>
+    </div>
 </div>
