--- a/src/app/home/things-to-do/things-to-do.component.scss
+++ b/src/app/home/things-to-do/things-to-do.component.scss
@@ -2,6 +2,7 @@
     color: white;
     background-color: rgba(255,255,255,0.3);
     padding: 2%;
+    margin: 0 10%;
     border-radius: 25px;
 }
 
