added featured articles

--- a/src/app/home/things-to-do/things-to-do.component.html
+++ b/src/app/home/things-to-do/things-to-do.component.html
@@ -7,15 +7,15 @@
         </div>
         <div id=card>
             <img>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi dicta atque rerum aut inventore quo vel voluptate, repellendus aperiam perferendis eaque assumenda facilis nam? Quis sequi voluptates ipsam obcaecati.</p>
         </div>
         <div id=card>
             <img>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, eligendi. Quam, voluptatibus praesentium iusto dolores quaerat voluptates voluptatem ipsum labore iste eum reprehenderit dolorum a, quidem culpa quibusdam cumque aspernatur.</p>
         </div>
         <div id=card>
             <img>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequatur fugiat voluptatem quis vel! Consectetur omnis quidem tempore molestias deserunt praesentium dignissimos dolores. Distinctio, expedita maiores nulla maxime aliquam repudiandae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione voluptate, blanditiis neque facere et asperiores voluptates magnam pariatur harum illo, quasi dolores alias tempora qui quibusdam labore est eveniet.</p>
         </div>
     </div>
 </div>
