mod navbar and featured

--- a/src/app/home/featured/featured.component.html
+++ b/src/app/home/featured/featured.component.html
@@ -1,23 +1,20 @@
 <div id=container>
     <h1>Featured</h1>
     <div id=gridContainer>
-        <div id=item>
+        <a routerLink="" id=item>
             <h4>Nationwide Lockdown</h4>
             <img>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam odio eveniet excepturi nesciunt a unde quo mollitia voluptatem quasi quas. Commodi, eligendi sunt neque suscipit obcaecati culpa? Ullam, excepturi expedita.</p>
-            <a routerLink=""><p>Read more</p></a>
-        </div>
-        <div id=item>
+        </a>
+        <a routerLink="" id=item>
             <h4>Scantarbian Space Program</h4>
             <img>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi impedit eligendi in porro molestiae ducimus corrupti ea nihil omnis. Iusto nisi omnis deleniti tempora dolores maxime commodi consectetur accusantium mollitia.</p>
-            <a routerLink=""><p>Read more</p></a>
-        </div>
-        <div id=item>
+        </a>
+        <a routerLink="" id=item>
             <h4>International Relations: Vaxn</h4>
             <img>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos in consequuntur nostrum, laudantium, temporibus provident corporis sapiente fuga tempora voluptatibus est adipisci omnis voluptas, aspernatur atque animi natus. Iste, quam.</p>
-            <a routerLink=""><p>Read more</p></a>
-        </div>
+        </a>
     </div>
 </div>
