--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,12 +4,12 @@
             <img src="../../assets/img/topmostLogo.png">
         </a>
     </div>
-    <ul>
-        <li routerLinkActive=active><a routerLink="/history">History</a></li>
-        <li routerLinkActive=active><a routerLink="/government">Government</a></li>
-        <li routerLinkActive=active><a routerLink="/economy">Economy</a></li>
-        <li routerLinkActive=active><a routerLink="/defence">Defence</a></li>
-        <li routerLinkActive=active><a routerLink="/culture">Culture</a></li>
-        <li routerLinkActive=active><a routerLink="/facts">Facts</a></li>
-    </ul>
+    <div id=nav>
+        <a routerLinkActive=active routerLink="/history">History</a>
+        <a routerLinkActive=active routerLink="/goernment">Government</a>
+        <a routerLinkActive=active routerLink="/economy">Economy</a>
+        <a routerLinkActive=active routerLink="/defence">Defence</a>
+        <a routerLinkActive=active routerLink="/culture">Culture</a>
+        <a routerLinkActive=active routerLink="/facts">Facts</a>
+    </div>
 </nav>
