--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-nav></app-nav>
-<div id=main>
-    <router-outlet></router-outlet>
+<div id=container>
+    <app-nav id=nav></app-nav>
+    <div id=main>
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer id=footer></app-footer>
 </div>
-<app-footer></app-footer>
