--- a/src/app/home/featured/featured.component.html
+++ b/src/app/home/featured/featured.component.html
@@ -16,5 +16,20 @@
             <img>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos in consequuntur nostrum, laudantium, temporibus provident corporis sapiente fuga tempora voluptatibus est adipisci omnis voluptas, aspernatur atque animi natus. Iste, quam.</p>
         </a>
+        <a routerLink="" id=item>
+            <h4>LYRAM in Keverai</h4>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, nisi reprehenderit quasi sapiente facere totam delectus tenetur provident, mollitia atque earum maiores illum itaque ratione sed laboriosam eaque ipsam a?</p>
+        </a>
+        <a routerLink="" id=item>
+            <h4>2021 Asterisk Scholarship</h4>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit incidunt fugiat quidem, iure dolorem repellat architecto ea, accusamus fugit tempora vero, beatae eaque officia magnam enim! Laboriosam quia dignissimos recusandae!</p>
+        </a>
+        <a routerLink="" id=item>
+            <h4>Moving to Scantarbia</h4>
+            <img>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab unde laboriosam esse nam accusamus deleniti dolore eum, ex ea ad aliquid cumque, officia magni debitis sint facere. Est, consequuntur itaque.</p>
+        </a>
     </div>
 </div>
