--- a/src/app/home/home-core/home-core.component.html
+++ b/src/app/home/home-core/home-core.component.html
@@ -1,10 +1,8 @@
-<div id=core>
-    <div id=parallax>
+<div parallax [config]="{ratio: .3}" id=parallax>
+    <div id=content>
         <app-welcome></app-welcome>
         <app-quick-links></app-quick-links>
         <app-featured></app-featured>
         <app-things-to-do></app-things-to-do>
     </div>
-    
-    <img src="../../../assets/img/home/welcomeSplash.jpg" draggable="false">
 </div>
