--- a/src/app/home/things-to-do/things-to-do.component.html
+++ b/src/app/home/things-to-do/things-to-do.component.html
@@ -1,5 +1,5 @@
 <div id=container>
-    <h3 class=no-margin>Things You Can Do</h3>
+    <h3 class=no-margin></h3>
     <div id=carousel>
         <div id=card>
             <img>
