--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -22,10 +22,10 @@ img {
 
 #nav{
     margin: 0;
-    padding: 0 .5%;
+    padding: 0;
     display: flex;
     color: white;
-    justify-content: right;
+    justify-content: flex-end;
 }
 
 
